--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "jest"
   },
-  "keywords": ["python"],
-  "license": "ISC",
+  "keywords": [
+    "python"
+  ],
   "devDependencies": {
     "jest": "^26.6.3"
   }
